--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
                      <div class="carousel-item active">
                         <div class="row">
                            <div class="col-sm-12">
-                              <h1 class="banner_taital">Get Start <br>Your favriot shoping</h1>
-                              <div class="buynow_bt"><a href="#">Buy Now</a></div>
+                              <h1 class="banner_taital">በታላቅ ቅናሽ<br>የፈለጉትን ዕቃ ከቻይና ያግኙ</h1>
+                              <div class="buynow_bt"><a href="#">ይሸምቱ/a></div>
                            </div>
                         </div>
                      </div>
