--- a/index.html
+++ b/index.html
@@ -139,14 +139,14 @@
                         <div class="row">
                            <div class="col-sm-12">
                               <h1 class="banner_taital">በታላቅ ቅናሽ<br>የፈለጉትን ዕቃ ከቻይና ያግኙ</h1>
-                              <div class="buynow_bt"><a href="#">ይሸምቱ/a></div>
+                              <div class="buynow_bt"><a href="#">ይሸምቱ</a></div>
                            </div>
                         </div>
                      </div>
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-sm-12">
-                              <h1 class="banner_taital">Get Start <br>Your favriot shoping</h1>
+                              <h1 class="banner_taital">በታላቅ ቅናሽ< <br>የፈለጉትን ዕቃ ከቻይና ያግኙ</h1>
                               <div class="buynow_bt"><a href="#">Buy Now</a></div>
                            </div>
                         </div>
@@ -154,7 +154,7 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-sm-12">
-                              <h1 class="banner_taital">Get Start <br>Your favriot shoping</h1>
+                              <h1 class="banner_taital">በታላቅ ቅናሽ <br>የፈለጉትን ዕቃ ከቻይና ያግኙ</h1>
                               <div class="buynow_bt"><a href="#">Buy Now</a></div>
                            </div>
                         </div>
