--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         <div class="row">
                            <div class="col-sm-12">
                               <h1 class="banner_taital">በታላቅ ቅናሽ< <br>የፈለጉትን ዕቃ ከቻይና ያግኙ</h1>
-                              <div class="buynow_bt"><a href="#">Buy Now</a></div>
+                              <div class="buynow_bt"><a href="#">ይሸምቱ</a></div>
                            </div>
                         </div>
                      </div>
@@ -155,7 +155,7 @@
                         <div class="row">
                            <div class="col-sm-12">
                               <h1 class="banner_taital">በታላቅ ቅናሽ <br>የፈለጉትን ዕቃ ከቻይና ያግኙ</h1>
-                              <div class="buynow_bt"><a href="#">Buy Now</a></div>
+                              <div class="buynow_bt"><a href="#">ይሸምቱ</a></div>
                            </div>
                         </div>
                      </div>
