--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
                   <div class="col-sm-12">
                      <div class="custom_menu">
                         <ul>
-                           <li><a href="#">Best Sellers</a></li>
-                           <li><a href="#">Gift Ideas</a></li>
-                           <li><a href="#">New Releases</a></li>
-                           <li><a href="#">Today's Deals</a></li>
-                           <li><a href="#">Customer Service</a></li>
+                           <li><a href="#">ኣዳዲስ ልብሶች</a></li>
+                           <li><a href="#">ከስተማይዝ ብራንዲንግ</a></li>
+                           <li><a href="#">የድርጅት ብራንዲንግ</a></li>
+                           <li><a href="#">የልደት ስጦታዎች</a></li>
+                           <li><a href="#">የግል ከስተማይዜሽን</a></li>
                         </ul>
                      </div>
                   </div>
@@ -117,11 +117,11 @@
                         <ul>
                            <li><a href="#">
                               <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                              <span class="padding_10">Cart</span></a>
+                              <span class="padding_10">ዘንቢል</span></a>
                            </li>
                            <li><a href="#">
                               <i class="fa fa-user" aria-hidden="true"></i>
-                              <span class="padding_10">Cart</span></a>
+                              <span class="padding_10">ዘንቢል</span></a>
                            </li>
                         </ul>
                      </div>
